--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,16 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
+    <context-param>
+        <param-name>view-prefix</param-name>
+        <param-value>/WEB-INF/pages</param-value>
+    </context-param>
 
+    <context-param>
+        <param-name>view-suffix</param-name>
+        <param-value>.html</param-value>
+    </context-param>
+    
     <filter>
         <filter-name>txFilter</filter-name>
         <filter-class>com.atguigu.imperial.court.filter.TransactionFilter</filter-class>
